python debugger ext

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
                 "mathematic.vscode-pdf",
                 "ms-ossdata.vscode-pgsql",
                 "charliermarsh.ruff",
-                "ms-azuretools.vscode-bicep"
+                "ms-azuretools.vscode-bicep",
+                "ms-python.debugpy"
             ]
         }
     },
