Refactor things into an app layout

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "🚀 All MCP Servers (Sales + Supplier + Finance)",
             "type": "debugpy",
             "request": "launch",
-            "module": "mcp_server.sales_analysis",
+            "module": "app.sales_analysis",
             "console": "integratedTerminal",
             "consoleName": "Sales Analysis MCP (Main)",
             "cwd": "${workspaceFolder}",
@@ -17,7 +17,7 @@
             "name": "📊 Sales Analysis MCP Server (Port 8000)",
             "type": "debugpy",
             "request": "launch",
-            "module": "mcp_server.sales_analysis",
+            "module": "app.sales_analysis",
             "console": "integratedTerminal",
             "consoleName": "Sales Analysis MCP",
             "cwd": "${workspaceFolder}",
@@ -29,7 +29,7 @@
             "name": "🏪 Supplier MCP Server (Port 8001)",
             "type": "debugpy",
             "request": "launch",
-            "module": "mcp_server.supplier_mcp_server",
+            "module": "app.supplier_mcp_server",
             "console": "integratedTerminal",
             "consoleName": "Supplier MCP",
             "cwd": "${workspaceFolder}",
@@ -41,7 +41,7 @@
             "name": "💰 Finance MCP Server (Port 8002)",
             "type": "debugpy",
             "request": "launch",
-            "module": "mcp_server.finance_mcp_server",
+            "module": "app.finance_mcp_server",
             "console": "integratedTerminal",
             "consoleName": "Finance MCP",
             "cwd": "${workspaceFolder}",
