Refactor mcp server names

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,7 +29,7 @@
             "name": "🏪 Supplier MCP Server (Port 8001)",
             "type": "debugpy",
             "request": "launch",
-            "module": "app.supplier_mcp_server",
+            "module": "app.mcp.supplier_server",
             "console": "integratedTerminal",
             "consoleName": "Supplier MCP",
             "cwd": "${workspaceFolder}",
@@ -41,7 +41,7 @@
             "name": "💰 Finance MCP Server (Port 8002)",
             "type": "debugpy",
             "request": "launch",
-            "module": "app.finance_mcp_server",
+            "module": "app.mcp.finance_server",
             "console": "integratedTerminal",
             "consoleName": "Finance MCP",
             "cwd": "${workspaceFolder}",
