--- a/requirements.lock.txt
+++ b/requirements.lock.txt
@@ -4,6 +4,10 @@
 #
 #    pip-compile --output-file=requirements.lock.txt requirements.in
 #
+agent-framework-core==1.0.0b251007
+    # via -r requirements.in
+aiofiles==25.1.0
+    # via agent-framework-core
 annotated-types==0.7.0
     # via pydantic
 anyio==4.10.0
@@ -33,11 +37,16 @@ azure-core-tracing-opentelemetry==1.0.0b12
 azure-identity==1.25.0
     # via
     #   -r requirements.in
+    #   agent-framework-core
     #   azure-monitor-opentelemetry-exporter
 azure-monitor-opentelemetry==1.8.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   agent-framework-core
 azure-monitor-opentelemetry-exporter==1.0.0b41
-    # via azure-monitor-opentelemetry
+    # via
+    #   agent-framework-core
+    #   azure-monitor-opentelemetry
 certifi==2025.8.3
     # via
     #   httpcore
@@ -59,6 +68,10 @@ distro==1.9.0
     # via openai
 fixedint==0.1.6
     # via azure-monitor-opentelemetry-exporter
+googleapis-common-protos==1.70.0
+    # via opentelemetry-exporter-otlp-proto-grpc
+grpcio==1.75.1
+    # via opentelemetry-exporter-otlp-proto-grpc
 h11==0.16.0
     # via
     #   httpcore
@@ -86,8 +99,10 @@ jsonschema==4.25.1
     # via mcp
 jsonschema-specifications==2025.9.1
     # via jsonschema
-mcp==1.14.0
-    # via -r requirements.in
+mcp[ws]==1.14.0
+    # via
+    #   -r requirements.in
+    #   agent-framework-core
 msal==1.33.0
     # via
     #   azure-identity
@@ -99,11 +114,15 @@ msrest==0.7.1
 oauthlib==3.3.1
     # via requests-oauthlib
 openai==1.107.3
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   agent-framework-core
 opentelemetry-api==1.36.0
     # via
+    #   agent-framework-core
     #   azure-core-tracing-opentelemetry
     #   azure-monitor-opentelemetry-exporter
+    #   opentelemetry-exporter-otlp-proto-grpc
     #   opentelemetry-instrumentation
     #   opentelemetry-instrumentation-asgi
     #   opentelemetry-instrumentation-asyncpg
@@ -119,6 +138,10 @@ opentelemetry-api==1.36.0
     #   opentelemetry-instrumentation-wsgi
     #   opentelemetry-sdk
     #   opentelemetry-semantic-conventions
+opentelemetry-exporter-otlp-proto-common==1.36.0
+    # via opentelemetry-exporter-otlp-proto-grpc
+opentelemetry-exporter-otlp-proto-grpc==1.36.0
+    # via agent-framework-core
 opentelemetry-instrumentation==0.57b0
     # via
     #   opentelemetry-instrumentation-asgi
@@ -161,12 +184,18 @@ opentelemetry-instrumentation-wsgi==0.57b0
     # via
     #   opentelemetry-instrumentation-django
     #   opentelemetry-instrumentation-flask
+opentelemetry-proto==1.36.0
+    # via
+    #   opentelemetry-exporter-otlp-proto-common
+    #   opentelemetry-exporter-otlp-proto-grpc
 opentelemetry-resource-detector-azure==0.1.5
     # via azure-monitor-opentelemetry
 opentelemetry-sdk==1.36.0
     # via
+    #   agent-framework-core
     #   azure-monitor-opentelemetry
     #   azure-monitor-opentelemetry-exporter
+    #   opentelemetry-exporter-otlp-proto-grpc
     #   opentelemetry-resource-detector-azure
 opentelemetry-semantic-conventions==0.57b0
     # via
@@ -183,6 +212,8 @@ opentelemetry-semantic-conventions==0.57b0
     #   opentelemetry-instrumentation-urllib3
     #   opentelemetry-instrumentation-wsgi
     #   opentelemetry-sdk
+opentelemetry-semantic-conventions-ai==0.4.13
+    # via agent-framework-core
 opentelemetry-util-http==0.57b0
     # via
     #   opentelemetry-instrumentation-asgi
@@ -198,6 +229,10 @@ packaging==25.0
     # via
     #   opentelemetry-instrumentation
     #   opentelemetry-instrumentation-flask
+protobuf==6.32.1
+    # via
+    #   googleapis-common-protos
+    #   opentelemetry-proto
 psutil==7.0.0
     # via azure-monitor-opentelemetry-exporter
 pycparser==2.23
@@ -205,13 +240,16 @@ pycparser==2.23
 pydantic==2.11.9
     # via
     #   -r requirements.in
+    #   agent-framework-core
     #   mcp
     #   openai
     #   pydantic-settings
 pydantic-core==2.33.2
     # via pydantic
 pydantic-settings==2.10.1
-    # via mcp
+    # via
+    #   agent-framework-core
+    #   mcp
 pyjwt[crypto]==2.10.1
     # via
     #   msal
@@ -254,10 +292,13 @@ tqdm==4.67.1
     # via openai
 typing-extensions==4.15.0
     # via
+    #   agent-framework-core
     #   azure-core
     #   azure-identity
+    #   grpcio
     #   openai
     #   opentelemetry-api
+    #   opentelemetry-exporter-otlp-proto-grpc
     #   opentelemetry-sdk
     #   opentelemetry-semantic-conventions
     #   pydantic
@@ -270,6 +311,8 @@ typing-inspection==0.4.1
 urllib3==2.5.0
     # via requests
 uvicorn==0.35.0
+    # via mcp
+websockets==15.0.1
     # via mcp
 wrapt==1.17.3
     # via
