--- a/requirements.lock.txt
+++ b/requirements.lock.txt
@@ -5,6 +5,10 @@
 #    pip-compile --output-file=requirements.lock.txt requirements.in
 #
 agent-framework-core==1.0.0b251007
+    # via
+    #   -r requirements.in
+    #   agent-framework-devui
+agent-framework-devui==1.0.0b251007
     # via -r requirements.in
 aiofiles==25.1.0
     # via agent-framework-core
@@ -17,6 +21,7 @@ anyio==4.10.0
     #   openai
     #   sse-starlette
     #   starlette
+    #   watchfiles
 asgiref==3.9.1
     # via opentelemetry-instrumentation-asgi
 asyncpg==0.30.0
@@ -66,6 +71,8 @@ cryptography==45.0.7
     #   pyjwt
 distro==1.9.0
     # via openai
+fastapi==0.119.0
+    # via agent-framework-devui
 fixedint==0.1.6
     # via azure-monitor-opentelemetry-exporter
 googleapis-common-protos==1.70.0
@@ -78,6 +85,8 @@ h11==0.16.0
     #   uvicorn
 httpcore==1.0.9
     # via httpx
+httptools==0.7.1
+    # via uvicorn
 httpx==0.28.1
     # via
     #   mcp
@@ -241,6 +250,7 @@ pydantic==2.11.9
     # via
     #   -r requirements.in
     #   agent-framework-core
+    #   fastapi
     #   mcp
     #   openai
     #   pydantic-settings
@@ -257,11 +267,15 @@ pyjwt[crypto]==2.10.1
 python-dotenv==1.1.1
     # via
     #   -r requirements.in
+    #   agent-framework-devui
     #   pydantic-settings
+    #   uvicorn
 python-multipart==0.0.20
     # via mcp
 pyyaml==6.0.2
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   uvicorn
 referencing==0.36.2
     # via
     #   jsonschema
@@ -287,7 +301,9 @@ sniffio==1.3.1
 sse-starlette==3.0.2
     # via mcp
 starlette==0.48.0
-    # via mcp
+    # via
+    #   fastapi
+    #   mcp
 tqdm==4.67.1
     # via openai
 typing-extensions==4.15.0
@@ -295,6 +311,7 @@ typing-extensions==4.15.0
     #   agent-framework-core
     #   azure-core
     #   azure-identity
+    #   fastapi
     #   grpcio
     #   openai
     #   opentelemetry-api
@@ -310,10 +327,18 @@ typing-inspection==0.4.1
     #   pydantic-settings
 urllib3==2.5.0
     # via requests
-uvicorn==0.35.0
-    # via mcp
+uvicorn[standard]==0.35.0
+    # via
+    #   agent-framework-devui
+    #   mcp
+uvloop==0.21.0
+    # via uvicorn
+watchfiles==1.1.0
+    # via uvicorn
 websockets==15.0.1
-    # via mcp
+    # via
+    #   mcp
+    #   uvicorn
 wrapt==1.17.3
     # via
     #   opentelemetry-instrumentation
