--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,8 @@
 name: zava_mcp_server
 
+# Note: PostgreSQL is now deployed to Azure
+# Local PostgreSQL container has been removed since we use Azure Database for PostgreSQL
 
 services:
-  postgres:
-    image: pgvector/pgvector:pg17-trixie
-    container_name: PG17
-    restart: unless-stopped
-    env_file:
-      - .env
-    environment:
-      - POSTGRES_INITDB_ARGS=--auth-host=scram-sha-256 --auth-local=scram-sha-256
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./data:/backup_data:ro
-      - ./docker-init:/docker-entrypoint-initdb.d:ro
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "PGPASSWORD=${POSTGRES_PASSWORD} pg_isready -U postgres -d zava && PGPASSWORD=${POSTGRES_PASSWORD} psql -U postgres -d zava -c 'SELECT 1 FROM retail.stores LIMIT 1;' > /dev/null 2>&1"]
-      interval: 15s
-      timeout: 3s
-      retries: 5
-      start_period: 45s
-
-
-
-volumes:
-  postgres_data:
+  # No services needed - MCP servers run directly via VS Code tasks
+  # This docker-compose.yml is kept for potential future local services
