--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,12 +33,21 @@
         "postgres_password": "postgres",
         "postgres_db": "zava"
     },
-    "forwardPorts": [8005],
+    "forwardPorts": [8005, 3000, 8091],
     "portsAttributes": {
         "8005": {
             "label": "Web Chat App",
             "onAutoForward": "openBrowserOnce"
+        },
+        "3000": {
+            "label": "Frontend (Vue)",
+            "onAutoForward": "notify"
+        },
+        "8091": {
+            "label": "Backend API",
+            "onAutoForward": "notify"
         }
-    }
+    },
+    "postCreateCommand": "bash .devcontainer/postCreateCommand.sh"
     // "postAttachCommand": "/bin/bash .devcontainer/make-port-public.sh 8005"
 }
