product listing API

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -60,6 +60,25 @@
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
             }
+        },
+        {
+            "name": "🔧 Backend API Server (Port 8091)",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "app.api.app",
+            "console": "integratedTerminal",
+            "consoleName": "Backend API",
+            "cwd": "${workspaceFolder}",
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}"
+            }
+        },
+        {
+            "name": "🎨 Frontend Dev Server (Port 3000)",
+            "type": "node-terminal",
+            "request": "launch",
+            "command": "npm run dev",
+            "cwd": "${workspaceFolder}/frontend"
         }
     ],
     "compounds": [
@@ -74,6 +93,19 @@
                 "hidden": false,
                 "group": "MCP Servers",
                 "order": 1
+            },
+            "stopAll": true
+        },
+        {
+            "name": "🌐 Full Stack Web App (Frontend + Backend)",
+            "configurations": [
+                "🔧 Backend API Server (Port 8091)",
+                "🎨 Frontend Dev Server (Port 3000)"
+            ],
+            "presentation": {
+                "hidden": false,
+                "group": "Web App",
+                "order": 2
             },
             "stopAll": true
         }
