--- a/data/requirements.txt
+++ b/data/requirements.txt
@@ -1,12 +1,17 @@
-faker>=37.4.0,<38.0.0
-numpy>=2.3.1,<3.0.0
-openai>=1.97.0, <2.0.0
-pillow>=11.2.1,<12.0.0
-requests>=2.32.4,<3.0.0
-torch>=2.7.1,<3.0.0
-transformers>=4.53.0,<5.0.0
-reportlab>=4.0.0,<5.0.0
-markdown>=3.5.0,<4.0.0
-pyodbc>=5.2.0, <6.0.0
-python-dotenv>=1.1.1, <2.0.0
-asyncpg>=0.30.0, <0.40.0
+# Core database and data processing
+asyncpg==0.30.0
+python-dotenv==1.1.1
+faker==37.11.0
+
+# Azure and OpenAI integrations
+azure-identity==1.25.0
+openai==2.3.0
+requests==2.32.5
+
+# Machine learning and embeddings
+torch==2.8.0
+transformers==4.57.1
+numpy==2.3.3
+
+# Image processing
+pillow==11.3.0
