Add caching remove RLS

--- a/requirements.in
+++ b/requirements.in
@@ -30,3 +30,7 @@ opentelemetry-instrumentation-asyncpg>=0.57b0, <1.0.0
 agent-framework-core --pre
 # agent-framework-devui --pre
 git+https://github.com/microsoft/agent-framework.git@main#subdirectory=python/packages/devui
+
+# FastAPI and related libraries
+fastapi # already in devui requirements but specifying here for clarity
+fastapi-cache2
