--- a/requirements.lock.txt
+++ b/requirements.lock.txt
@@ -72,7 +72,12 @@ cryptography==45.0.7
 distro==1.9.0
     # via openai
 fastapi==0.119.0
-    # via agent-framework-devui
+    # via
+    #   -r requirements.in
+    #   agent-framework-devui
+    #   fastapi-cache2
+fastapi-cache2==0.2.2
+    # via -r requirements.in
 fixedint==0.1.6
     # via azure-monitor-opentelemetry-exporter
 googleapis-common-protos==1.70.0
@@ -238,6 +243,8 @@ packaging==25.0
     # via
     #   opentelemetry-instrumentation
     #   opentelemetry-instrumentation-flask
+pendulum==3.1.0
+    # via fastapi-cache2
 protobuf==6.32.1
     # via
     #   googleapis-common-protos
@@ -264,6 +271,8 @@ pyjwt[crypto]==2.10.1
     # via
     #   msal
     #   pyjwt
+python-dateutil==2.9.0.post0
+    # via pendulum
 python-dotenv==1.1.1
     # via
     #   -r requirements.in
@@ -293,7 +302,9 @@ rpds-py==0.27.1
     #   jsonschema
     #   referencing
 six==1.17.0
-    # via azure-core
+    # via
+    #   azure-core
+    #   python-dateutil
 sniffio==1.3.1
     # via
     #   anyio
@@ -312,6 +323,7 @@ typing-extensions==4.15.0
     #   azure-core
     #   azure-identity
     #   fastapi
+    #   fastapi-cache2
     #   grpcio
     #   openai
     #   opentelemetry-api
@@ -325,11 +337,14 @@ typing-inspection==0.4.1
     # via
     #   pydantic
     #   pydantic-settings
+tzdata==2025.2
+    # via pendulum
 urllib3==2.5.0
     # via requests
 uvicorn[standard]==0.35.0
     # via
     #   agent-framework-devui
+    #   fastapi-cache2
     #   mcp
 uvloop==0.21.0
     # via uvicorn
