--- a/requirements.in
+++ b/requirements.in
@@ -9,8 +9,9 @@
 # Core MCP framework
 mcp>=1.10.0,<2.0.0
 
-# Database adapters
-asyncpg>=0.30.0,<0.31.0
+# Database adapters (SQLite only)
+aiosqlite>=0.20.0,<0.21.0
+sqlalchemy[asyncio]>=2.0.0,<3.0.0
 
 # Azure AI and authentication
 azure-identity>=1.23.0,<2.0.0
@@ -24,7 +25,7 @@ PyYAML>=6.0,<7.0.0
 
 # OpenTelemetry for observability
 opentelemetry-instrumentation-starlette>=0.57b0, <1.0.0
-opentelemetry-instrumentation-asyncpg>=0.57b0, <1.0.0
+opentelemetry-instrumentation-sqlalchemy>=0.57b0, <1.0.0
 
 # MAF
 agent-framework-core --pre
