--- a/apphost.run.json
+++ b/apphost.run.json
@@ -1,18 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:15113",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "DOTNET_ENVIRONMENT": "Development",
-        "ASPIRE_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:19091",
-        "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20293"
-      }
-    },
+
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
@@ -23,6 +12,19 @@
         "DOTNET_ENVIRONMENT": "Development",
         "ASPIRE_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:21252",
         "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22186"
+      }
+    },
+        "http": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:15113",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DOTNET_ENVIRONMENT": "Development",
+        "ASPIRE_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:19091",
+        "ASPIRE_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20293",
+        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true"
       }
     }
   }
