--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -65,13 +65,19 @@
             "name": "🔧 Backend API Server (Port 8091)",
             "type": "debugpy",
             "request": "launch",
-            "module": "app.api.app",
+            "module": "uvicorn",
             "console": "integratedTerminal",
             "consoleName": "Backend API",
             "cwd": "${workspaceFolder}",
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}"
-            }
+            "python": "${workspaceFolder}/app/api/.venv/bin/python",
+            "args": [
+                "github_shop_api.app:app",
+                "--reload",
+                "--host",
+                "0.0.0.0",
+                "--port",
+                "8091"
+            ]
         },
         {
             "name": "🎨 Frontend Dev Server (Port 3000)",
