--- a/app/mcp/pyproject.toml
+++ b/app/mcp/pyproject.toml
@@ -6,6 +6,8 @@ requires-python = ">=3.12"
 dependencies = [
     "fastmcp",
     "opentelemetry-instrumentation-starlette",
+    "opentelemetry-exporter-otlp",
+    "opentelemetry-distro",
     # local editable packages
     "github-shop-shared",
 ]
